--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,11 +3,9 @@
     margin: 10px;
 }
 
-*.section-container.header {
+.section-container.header {
    background-color: rgba(211,211,211, .2);
 }
-
-
 
 h1.title {
     text-align: center;
@@ -23,7 +21,6 @@ h1 {
     padding-left: 15px;
     margin-bottom: 5px;
 }
-
 
 h2 {
     font-family: 'Bungee Inline', cursive;
@@ -43,12 +40,10 @@ h2 {
     padding-left: 15px;
 }
 
-
 p, li{
     font-size: 14px; 
     font-family: 'IBM Plex Mono', monospace;
 }
-
 
 ul, li {
     margin-top: 0px;
@@ -73,7 +68,6 @@ p.font-1 {
 .fonts-outer {
     text-align: center;
 }
-
 
 .ibm-line-1 {
     font-family: 'IBM Plex Mono', monospace;
@@ -116,14 +110,12 @@ p.font-1 {
     min-height: 60px;
 }
 
-
 .color-1 {
     background-color: #103583;
     color: white;
     font-weight: bold;
     font-family: 'IBM Plex Mono', monospace;
 }
-
 
 .color-2 {
     background-color: #ffffff;
@@ -135,15 +127,9 @@ p.font-1 {
     background-color: #2f8fc8;
     font-family: 'IBM Plex Mono', monospace;
     color: white;
-
-}
-
-.footer {
-    
 }
 
 .footer-container {
-    /*background-color: rgba(47, 143, 200, .2);*/
     border: 2px solid #d3d3d3;   
     color: #2f8fc8;
     font-weight: bold;
